# peopen

./: .gitignore  Procfile  README.md  devbox.json  final_penprompter.json  justfile  list_broshures_iniatives.md  pyproject.toml  response.json  wiki-table-edited.numbers  wiki-table-volksabstimmungen.html
assets/: icon.pxd
evaluations/: model_scores.csv  model_scores_with_readability.csv
models/: 2024-09-03_first_training_run.json  2024-09-03_second_training_run.json  2024-10-06_first_run_2024-10-06.json  2024-10-07_first_run_2024-10-06.json  2024-10-21_factual_consistency_model_first_run.json  2024-10-25_penprompter-first-full-training.json  2024-10-27_penprompter-first-full-training.json  2024-10-31_bootsrapfewshotwithrandomsearch.json  2024-11-01_penprompter-boostrapfewshot-Qwen_Qwen2.5-72B-Instruct-Turbo.json  2024-11-01_penprompter-boostrapfewshot-Qwen_Qwen2.5-7B-Instruct-Turbo.json  2024-11-01_penprompter-boostrapfewshot-gpt-4o.json  2024-11-01_penprompter-boostrapfewshot-meta-llama_Llama-3.2-11B-Vision-Instruct-Turbo.json  2024-11-01_penprompter-boostrapfewshot-meta-llama_Llama-3.2-90B-Vision-Instruct-Turbo.json  2024-11-01_penprompter-bootsrapfewshotwithrandomsearch-meta-llama_Llama-3.2-90B-Vision-Instruct-Turbo.json  2024-11-01_penprompter-bootsrapfewshotwithrandomsearch-mistralai_Mixtral-8x22B-Instruct-v0.1.json  2024-11-01_penprompter-miprov2fewshot-gpt-4o-mini.json  2024-11-01_penprompter-miprov2fewshot-meta-llama_Llama-3.2-90B-Vision-Instruct-Turbo.json  2024-11-02_penprompter-miprov2fewshot-Qwen_Qwen2.5-7B-Instruct-Turbo.json  2024-11-04_penprompter-boostrapfewshot-Qwen_Qwen2.5-7B-Instruct-Turbo.json  2024-11-04_penprompter-boostrapfewshot-meta-llama_Llama-3.2-11B-Vision-Instruct-Turbo.json  2024-11-04_penprompter-boostrapfewshot-meta-llama_Llama-3.2-90B-Vision-Instruct-Turbo.json  dspy_lds_pipeline_Meta-Llama-3-8B-Instruct.Q8_0_2024-05-29.json  dspy_lds_pipeline_Meta-Llama-3-8B-Instruct.Q8_0_2024_07_23.json  final_factual_consistency.json  instructions_to_save.pickle  logs.txt
notebooks/: dspy_lds_pipeline.py  first_running_pipeline_experiments.py  scale_lds_task_exploration.py  second_running_pipeline_experiments.py  testing_of_dependencies.py  third_refactored_approach.py
src/: model_definition.py  model_evaluation.py  peop-3.py  (+4 more)
(+200 files in other folders)
