[tool.poetry]
name = "peopen"
version = "0.1.0"
description = ""
authors = ["hazn <aitakprojects@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.12"
torch = "^2.3.0"
cookiecutter = "^2.6.0"
marimo = "*"
numpy = "^1.26.4"
dspy-ai = "^2.4"
nltk = "^3.8.1"
rouge = "^1.0.1"
evaluate = "^0.4.1"
tiktoken = "^0.6.0"
bert-score = "^0.3.13"
arize-phoenix = "^4.2.4"
openinference-instrumentation-dspy = "^0.1.9"
opentelemetry-exporter-otlp = "^1.24.0"
marker-pdf = "^0.2.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
